[package]
name = "unreal_rs"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
anyhow = { version ="1.0.43", features = ["backtrace"]}
log = "0.4"

[lib]
name = "unreal_rs"
crate-type = ["dylib"]
#[build]
#rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

[build-dependencies]
once_cell = "1.8.0"
chrono = "0.4"
anyhow = "1.0.43"
dunce = "1.0.2"